--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     </head>
     <body>
         <div class="header"></div>
-        <div class="navbar"></div>
+        
+        <button>Cari</button>
 
+        <div class="navbar"></div>
+        
 
 
 
