Test Cr Pakai Fetch

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     </head>
     <body>
         <div class="header"></div>
-        
+        <input type="text" value="HAI JEVA :V">
         <button>Cari</button>
 
-        <div class="navbar"></div>
+        <div class="navbar">
+        </div>
         
 
 
