--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
     <footer>
         <img src="liputan6.png"/>
         <ul>
-            <a href="kontak.html">Kontak</a>
-            <a href="redaksi.html"> Redaksi</a>
-            <a href="karir.html"> Karir</a>
-            <a href="sitemap.html"> Sitemap</a>
-            <a href="disclaimer.html"> Disclaimer</a>
-            <a href="tentangkami.html">Tentang Kami</a>
+            <a href="#">Kontak</a>
+            <a href="#"> Redaksi</a>
+            <a href="#"> Karir</a>
+            <a href="#"> Sitemap</a>
+            <a href="#"> Disclaimer</a>
+            <a href="#">Tentang Kami</a>
+            <a href="#">Kode Etik</a>
+            <a href="#">Hak Jawab dan Koreksi Berita</a>
+            <a href="#">Form Pengaduan</a>
+            <a href="#">Pedoman Media Siber</a>
+            <a href="#">Metode Cek Fakta</a>
         </ul>
-        <button>Kode Etik</button>
-        <button>Hak Jawab dan Koreksi Berita</button>
-        <button>Form Pengaduan</button>
-        <button>Pedoman Media Siber</button>
-        <button>Metode Cek Fakta</button>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </footer>
 </html>
