--- a/index.html
+++ b/index.html
@@ -37,19 +37,31 @@
     </body>
     <footer>
         <img src="liputan6.png"/>
-        <ul>
-            <a href="#">Kontak</a>
-            <a href="#"> Redaksi</a>
-            <a href="#"> Karir</a>
-            <a href="#"> Sitemap</a>
-            <a href="#"> Disclaimer</a>
-            <a href="#">Tentang Kami</a>
-            <a href="#">Kode Etik</a>
-            <a href="#">Hak Jawab dan Koreksi Berita</a>
-            <a href="#">Form Pengaduan</a>
-            <a href="#">Pedoman Media Siber</a>
-            <a href="#">Metode Cek Fakta</a>
-        </ul>
+        <div id="footer1">
+            <ul>
+            <li class="footer-list">
+                <a class="footer-nav" href="#">KONTAK</a>
+                <a class="footer-nav" href="#">REDAKSI</a>
+                <a class="footer-nav" href="#">KARIR</a>
+                <a class="footer-nav" href="#">SITEMAP</a>
+            </li>
+            </ul>
+        </div>
+        <div id="footer2">
+            <ul>
+                <a href="#">DISCLAIMER</a>
+                <a href="#">TENTANG KAMI</a>
+                <a href="#">KODE ETIK</a>
+                <a href="#">HAK JAWAB DAN KOREKSI BERITA</a>
+            </ul>
+        </div>
+        <div id="footer3">
+            <ul>
+                <a href="#">FORM PENGADUAN</a>
+                <a href="#">PEDOMAN MEDIA SIBER</a>
+                <a href="#">METODE CEK FAKTA</a>
+            </ul>
+        </div>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </footer>
 </html>
