--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <div class="contact"></div>
     </body>
     <footer>
+        <div class="container-besar">
+        <div class="footerlogo">
         <img src="liputan6.png"/>
+        </div>
         <div id="footer1">
             <ul>
             <li class="footer-list">
@@ -62,6 +65,7 @@
                 <a href="#">METODE CEK FAKTA</a>
             </ul>
         </div>
+    </div>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </footer>
 </html>
