--- a/index.html
+++ b/index.html
@@ -11,22 +11,35 @@
         <div class="header">
                 <nav>
                     <ul>
-                        <a href="#">HOME</a>
-                        <a href="#">NEWS</a>
-                        <a href="#">BISNIS</a>
-                        <a href="#">BOLA</a>
-                        <a href="#">FOTO</a>
-                        <a href="#">TEKNNO</a>
-                        <a href="#">CEK FAKTA</a>
-                        <a href="#">VIDEO</a>
-                        <a href="#">HOT</a>
-                        <a href="#">DISABILITAS</a>
-                        <a href="#">GLOBAL</a>
-                        <a href="#">OTOMOTIF</a>
-                        <a href="#">ON OFF</a>
+                        <div><a href="#">HOME</a></div>
+                        <div><a href="#">NEWS</a></div>
+                        <div><a href="#">BISNIS</a></div>
+                        <div><a href="#">BOLA</a></div>
+                        <div><a href="#">FOTO</a></div>
+                        <div><a href="#">TEKNO</a></div>
+                        <div><a href="#">CEK FAKTA</a></div>
+                        <div><a href="#">VIDEO</a></div>
+                        <div><a href="#">HOT</a></div>
+                        <div><a href="#">DISABILITAS</a></div>
+                        <div><a href="#">GLOBAL</a></div>
+                        <div><a href="#">OTOMOTIF</a></div>
+                        <div class="dropdown">
+                            <a href="#" class="dropbtn">LAINNNYA</a>
+                            <div class="dropdown-content">
+                                <a href="#">ON OFF</a>
+                                <a href="#">SURABAYA</a>
+                                <a href="#">REGIONAL</a>
+                                <a href="#">LIFESTYLE</a>
+                                <a href="#">HEALTH</a>
+                                <a href="#">CITIZEN6</a>
+                                <a href="#">TV</a>
+                                <a href="#">PROPERTI</a>
+                            </div>
+                        </div>
                     </ul>
                 </nav>
         </div>
+                 
         <div class="navbar">
         </div>
         
