--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="footerlogo">
         <img src="liputan6.png"/>
         </div>
-        <div id="footer1">
+        <div class="footer1">
             <ul>
             <li class="footer-list">
                 <a class="footer-nav" href="#">KONTAK</a>
@@ -50,20 +50,24 @@
             </li>
             </ul>
         </div>
-        <div id="footer2">
+        <div class="footer2">
             <ul>
-                <a href="#">DISCLAIMER</a>
-                <a href="#">TENTANG KAMI</a>
-                <a href="#">KODE ETIK</a>
-                <a href="#">HAK JAWAB DAN KOREKSI BERITA</a>
+            <li class="footer-list2"></li>
+                <a class="footer-nav2" href="#">DISCLAIMER</a>
+                <a class="footer-nav2" href="#">TENTANG KAMI</a>
+                <a class="footer-nav2" href="#">KODE ETIK</a>
+                <a class="footer-nav2" href="#">HAK JAWAB DAN KOREKSI BERITA</a>
+            </li>
             </ul>
         </div>
-        <div id="footer3">
+        <div class="footer3">  
             <ul>
-                <a href="#">FORM PENGADUAN</a>
-                <a href="#">PEDOMAN MEDIA SIBER</a>
-                <a href="#">METODE CEK FAKTA</a>
-            </ul>
+                <li class="footer-list3">
+                <a class="footer-nav3" href="#">FORM PENGADUAN</a>
+                <a class="footer-nav3" href="#">PEDOMAN MEDIA SIBER</a>
+                <a class="footer-nav3" href="#">METODE CEK FAKTA</a>
+            </li>
+        </ul>
         </div>
     </div>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
