--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
-    <body>
-            <div class="header">
+    <header>
                     <div class="container">
                         <nav>
                              <div class="row">
@@ -39,7 +38,7 @@
                                         <div><a href="#">GLOBAL</a></div>
                                         <div><a href="#">OTOMOTIF</a></div>
                                         <div class="dropdown">
-                                            <a href="#" class="dropbtn">LAINNNYA</a>
+                                            <a href="#" class="dropbtn">LAINNYA</a>
                                             <div class="dropdown-content">
                                                 <a href="#">ON OFF</a>
                                                 <a href="#">SURABAYA</a>
@@ -53,9 +52,8 @@
                                         </div>
                                     </ul>
                                 </nav>
-                    </div>
-                    
-
+    </header>
+    <body>
     </body>
     <footer>
         <div class="container-besar">
