--- a/index.html
+++ b/index.html
@@ -8,54 +8,32 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-            <div class="header">
-                    <div class="container">
-                        <nav>
-                             <div class="row">
-                                <div class="col"><img src="header.png" class="form-group"/></div>
-                                <div class="form-group col-md">
-                                    <input id="exampleFormControlInput5" placeholder="berita apa yang ingin anda baca hari ini?" class="rounded-pill form-control form-control-underlined">
-                                </div>
-                                <div class="form-group com">
-                                    <button type="submit" class="btn rounded-pill btn-block shadow-sm">Cari</button>
-                                </div>
-                                <div class="col"><a href="#">MASUK</a></div>
-                            </div>
-                        </nav>
-                    </div>
-                    <div>
-                            <nav>
-                                    <ul>
-                                        <div><a href="#">HOME</a></div>
-                                        <div><a href="#">NEWS</a></div>
-                                        <div><a href="#">BISNIS</a></div>
-                                        <div><a href="#">BOLA</a></div>
-                                        <div><a href="#">FOTO</a></div>
-                                        <div><a href="#">TEKNO</a></div>
-                                        <div><a href="#">CEK FAKTA</a></div>
-                                        <div><a href="#">VIDEO</a></div>
-                                        <div><a href="#">HOT</a></div>
-                                        <div><a href="#">DISABILITAS</a></div>
-                                        <div><a href="#">GLOBAL</a></div>
-                                        <div><a href="#">OTOMOTIF</a></div>
-                                        <div class="dropdown">
-                                            <a href="#" class="dropbtn">LAINNNYA</a>
-                                            <div class="dropdown-content">
-                                                <a href="#">ON OFF</a>
-                                                <a href="#">SURABAYA</a>
-                                                <a href="#">REGIONAL</a>
-                                                <a href="#">LIFESTYLE</a>
-                                                <a href="#">HEALTH</a>
-                                                <a href="#">CITIZEN6</a>
-                                                <a href="#">TV</a>
-                                                <a href="#">PROPERTI</a>
-                                            </div>
-                                        </div>
-                                    </ul>
-                                </nav>
-                    </div>
-                    
+        <div class="header">
+                <nav>
+                    <ul>
+                        <a href="#">HOME</a>
+                        <a href="#">NEWS</a>
+                        <a href="#">BISNIS</a>
+                        <a href="#">BOLA</a>
+                        <a href="#">FOTO</a>
+                        <a href="#">TEKNNO</a>
+                        <a href="#">CEK FAKTA</a>
+                        <a href="#">VIDEO</a>
+                        <a href="#">HOT</a>
+                        <a href="#">DISABILITAS</a>
+                        <a href="#">GLOBAL</a>
+                        <a href="#">OTOMOTIF</a>
+                        <a href="#">ON OFF</a>
+                    </ul>
+                </nav>
+        </div>
+        <div class="navbar">
+        </div>
+        
 
+
+
+        <div class="contact"></div>
     </body>
     <footer>
         <div class="container-besar">
@@ -74,7 +52,7 @@
         </div>
         <div class="footer2">
             <ul>
-            <li class="footer-list2"></li>
+            <li class="footer-list2">
                 <a class="footer-nav2" href="#">DISCLAIMER</a>
                 <a class="footer-nav2" href="#">TENTANG KAMI</a>
                 <a class="footer-nav2" href="#">KODE ETIK</a>
