--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="footerlogo">
         <img src="liputan6.png"/>
         </div>
-        <div class="container-besar">
+        <div class="footer-kiri">
             <div class="col-4" style="display: inline-block; width: 15%;">
                 <li class="footer-list">
                     <a class="footer-nav" href="#">KONTAK</a>
@@ -88,7 +88,11 @@
             <div class="contact">
                 <a href="https://facebook.com/liputan6online/"><img src="facebook.png" alt="fb"></a>
                 <a href="https://twitter.com/liputan6dotcom/"><img src="twitter.png" alt="twit"></a>
+                <a href="https://www.vidio.com/users/liputan6"><img src="vidio.jpg" alt="vidio"></a>
             </div>
+        </div>
+        <div class="footer-kanan">
+            <h4><strong>Jaringan</strong></h4>
         </div>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </footer>
