--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
         </div>
         <div class="footer-kanan">
             <h4><strong>Jaringan</strong></h4>
-            
+            <li>
+                <a class="footer-bagian-kanan" href="https://www.liputan6.com" title="liputan6.com"><i class="footer-liputan"><img src="images/lip6.svg"></i>Liputan6.com</a>
+                <a class="footer-bagian-kanan" href="https://www.vidio.com" title="vidio.com"><i class="footer-vidio"><img src="images/vidio_com.svg"></i>Vidio.com</a>
+                <a class="footer-bagian-kanan" href="https://www.bola.net" title="bola.net"><i class="footer-bola"><img src="images/bola_net.svg"></i>Bola.net</a>
+                <a class="footer-bagian-kanan" href="https://www.fimela.com" title="fimela.com"><i class="footer-fimela"><img src="images/fimela.svg"></i>Fimela.com</a>
+                <a class="footer-bagian-kanan" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
+                <a class="footer-bagian-kanan" href="https://www.dream.co.id" title="Dream.co.id"><i class="footer-dream"><img src="images/dreamcoid.svg"></i>Dream.co.id</a>
+            </li>
         </div>
         <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </div>    
