--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
                 <a class="footer-bagian-kanan" href="https://www.bola.net" title="bola.net"><i class="footer-bola"><img src="images/bola_net.svg"></i>Bola.net</a>
                 <a class="footer-bagian-kanan" href="https://www.fimela.com" title="fimela.com"><i class="footer-fimela"><img src="images/fimela.svg"></i>Fimela.com</a>
                 <a class="footer-bagian-kanan" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
+                <a class="footer-bagian-kanan" href="https://www.bola.com" title="bola.com"><i class="footer-bola-com"><img src="images/bola_com.svg"></i>Bola.com</a>
+                <a class="footer-bagian-kanan" href="https://www.klikdokter.com" title="klikdokter.com"><i class="footer-klikdokter"><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
+                <a class="footer-bagian-kanan" href="https://www.brilio.net" title="brilio.net"><i class="footer-brilio"><img src="images/brilio.svg"></i>Brilio.net</a>
+                <a class="footer-bagian-kanan" href="https://www.KapanLagi.com" title="KapanLagi.com"><i class="footer-kapanlagi"><img src="images/kapanlagi.svg"></i>KapanLagi.com</a>
+                <a class="footer-bagian-kanan" href="https://www.vemale.com" title="vemale.com"><i class="footer-vemale"><img src="images/vemale.svg"></i>Vemale.com</a>
+                <a class="footer-bagian-kanan" href="https://www.bintang.com" title="bintang.com"><i class="footer-bintang"><img src="images/bintang_com.svg"></i>Bintang.com</a>
+                <a class="footer-bagian-kanan" href="https://www.bukalapak.com" title="bukalapak.com"><i class="footer-bukalapak"><img style="width: 1%;" src="images/bukalapak.svg"></i>Bukalapak.com</a>
+                <a class="footer-bagian-kanan" href="https://www.famous.id" title="famous.id"><i class="footer-famous"><img src="images/famous.svg"></i>Famous.id</a>
+                <a class="footer-bagian-kanan" href="https://www.merdeka.com" title="merdeka.com"><i class="footer-merdeka"><img src="images/merdeka.svg"></i>Merdeka.com</a>
                 <a class="footer-bagian-kanan" href="https://www.dream.co.id" title="Dream.co.id"><i class="footer-dream"><img src="images/dreamcoid.svg"></i>Dream.co.id</a>
             </li>
         </div>
