--- a/index.html
+++ b/index.html
@@ -52,6 +52,27 @@
                     </div>
                 </ul>
             </nav>
+            <div class="row py-2" style="background-color: orange;">
+                <!--Breaking box-->
+                <div class="col-1 col-md-3 col-lg-2 py-1 pr-md-0 mb-md-1">
+                    <div class="d-inline-block d-md-block text-center breaking-caret py-1 px-2">
+                        <button class="rounded-pill btn-block shadow-sm d-none d-md-inline-block" style="background-color: white;">HEADLINE HARI INI</button>
+                    </div>
+                </div>
+                <!--Breaking content-->
+                <div class="col-11 col-md-9 col-lg-10 pl-1 pl-md-2">
+                    <div class="breaking-box pt-2 pb-1">
+                        <!--marque-->
+                        <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseleave="this.start();">
+                          <a class="h6 font-weight-bold" href="" style="color: white;">Google Employees Protest Secret Work on Censored Search Engine for China</a>
+                          <a class="h6 font-weight-bold" href="" style="color: white;">Investors Betting Against Tesla Made $1 Billion on Friday</a>
+                          <a class="h6 font-weight-bold" href="" style="color: white;"> World cup 2050 will release in Dubay</a>
+                          <a class="h6 font-weight-bold" href="" style="color: white;">Lemon make your skin fresh and glowing</a>
+                          <a class="h6 font-weight-bold" href="" style="color: white;"> 5 Takeaways From Elon Musk’s Interview With The Times About Tesla</a>
+                        </marquee>
+                    </div>
+                </div>
+            </div>
     </header>
     <body>
         
