--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!--Breaking box-->
                 <div class="col-1 col-md-3 col-lg-2 py-1 pr-md-0 mb-md-1">
                     <div class="d-inline-block d-md-block text-center breaking-caret py-1 px-2">
-                        <button class="rounded-pill btn-block shadow-sm d-none d-md-inline-block" style="background-color: white;">HEADLINE HARI INI</button>
+                        <button class="rounded-pill btn-block shadow-sm d-none d-md-inline-block" style="background-color: white; color:orange;">HEADLINE HARI INI</button>
                     </div>
                 </div>
                 <!--Breaking content-->
