--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     </body>
     <footer>
         <div class="footer-all-wrap">
-        <div class="footerlogo">
+        <div class="footerlogo col-4">
         <img src="liputan6.png"/>
         </div>
-        <div class="footer-kiri col-12">
+        <div class="footer-kiri col-6">
             <div class="col-4" style="display: inline-block; width: 15%;">
                 <li class="footer-list">
                     <a class="footer-nav" href="#">KONTAK</a>
@@ -112,9 +112,9 @@
                 <a href="https://www.vidio.com/users/liputan6"><img src="vidio.jpg" alt="vidio"></a>
             </div>
         </div>
-        <div class="footer-kanan col-12">
+        <div class="footer-kanan col-6">
             <h4 class="footer-kanan-judul"><strong>Jaringan</strong></h4>
-            <div class="footer-kanan-1 col-4">
+            <div class="footer-kanan-1 col-3 row align-items-start">
                 <li>
                     <a class="footer-bagian-kanan" href="https://www.liputan6.com" title="liputan6.com"><i class="footer-liputan"><img src="images/lip6.svg"></i>Liputan6.com</a>
                     <a class="footer-bagian-kanan" href="https://www.vidio.com" title="vidio.com"><i class="footer-vidio"><img src="images/vidio_com.svg"></i>Vidio.com</a>
@@ -123,7 +123,7 @@
                     <a class="footer-bagian-kanan" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
                 </li>
             </div>
-            <div class="footer-kanan-2 col-4">
+            <div class="footer-kanan-2 col-3 row align-items-center">
                 <li>
                     <a class="footer-bagian-kanan" href="https://www.bola.com" title="bola.com"><i class="footer-bola-com"><img src="images/bola_com.svg"></i>Bola.com</a>
                     <a class="footer-bagian-kanan" href="https://www.klikdokter.com" title="klikdokter.com"><i class="footer-klikdokter"><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
@@ -132,7 +132,7 @@
                     <a class="footer-bagian-kanan" href="https://www.vemale.com" title="vemale.com"><i class="footer-vemale"><img src="images/vemale.svg"></i>Vemale.com</a>
                 </li>
             </div>
-            <div class="footer-kanan-3 col-4">
+            <div class="footer-kanan-3 col-3 row align-items-end">
                 <li>    
                     <a class="footer-bagian-kanan" href="https://www.bintang.com" title="bintang.com"><i class="footer-bintang"><img src="images/bintang_com.svg"></i>Bintang.com</a>
                     <a class="footer-bagian-kanan" href="https://www.bukalapak.com" title="bukalapak.com"><i class="footer-bukalapak"><img style="width: 1%;" src="images/bukalapak.svg"></i>Bukalapak.com</a>
