Fixed Merge Problem
:" Maap gengs

--- a/index.html
+++ b/index.html
@@ -79,17 +79,10 @@
     </body>
     <footer>
         <div class="footer-all-wrap">
-<<<<<<< HEAD
-        <div class="footerlogo">
-        <img src="liputan6.png"/>
-        </div>
-        <div class="footer-kiri col-12">
-=======
-        <div class="footerlogo col-4">
-        <img src="liputan6.png"/>
-        </div>
-        <div class="footer-kiri col-6">
->>>>>>> parent of f3dc2f3... balu
+        <div class="footer-kiri mt-2 col-6">
+            <div class="footerlogo mt-2 mb-2 col-4">
+                <img src="liputan6.png"/>
+            </div>
             <div class="col-4" style="display: inline-block; width: 15%;">
                 <li class="footer-list">
                     <a class="footer-nav" href="#">KONTAK</a>
@@ -113,22 +106,16 @@
                     <a class="footer-nav" href="#">METODE CEK FAKTA</a>
                 </li>
             </div>
-            <div class="contact">
+            <div class="contact d-md-block col-12">
                 <a href="https://facebook.com/liputan6online/"><img src="facebook.png" alt="fb"></a>
                 <a href="https://twitter.com/liputan6dotcom/"><img src="twitter.png" alt="twit"></a>
                 <a href="https://www.vidio.com/users/liputan6"><img src="vidio.jpg" alt="vidio"></a>
             </div>
         </div>
-<<<<<<< HEAD
-        <div class="footer-kanan col-12">
-            <h4 class="footer-kanan-judul"><strong>Jaringan</strong></h4>
-            <div class="footer-kanan-1 col-4">
-=======
         <div class="footer-kanan col-6">
-            <h4 class="footer-kanan-judul"><strong>Jaringan</strong></h4>
+            <h4 class="footer-kanan-judul mt-3"><strong>Jaringan</strong></h4>
             <div class="footer-kanan-1 col-3 row align-items-start">
->>>>>>> parent of f3dc2f3... balu
-                <li>
+                <li class="row">
                     <a class="footer-bagian-kanan" href="https://www.liputan6.com" title="liputan6.com"><i class="footer-liputan"><img src="images/lip6.svg"></i>Liputan6.com</a>
                     <a class="footer-bagian-kanan" href="https://www.vidio.com" title="vidio.com"><i class="footer-vidio"><img src="images/vidio_com.svg"></i>Vidio.com</a>
                     <a class="footer-bagian-kanan" href="https://www.bola.net" title="bola.net"><i class="footer-bola"><img src="images/bola_net.svg"></i>Bola.net</a>
@@ -136,12 +123,8 @@
                     <a class="footer-bagian-kanan" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
                 </li>
             </div>
-<<<<<<< HEAD
-            <div class="footer-kanan-2 col-4">
-=======
             <div class="footer-kanan-2 col-3 row align-items-center">
->>>>>>> parent of f3dc2f3... balu
-                <li>
+                <li class="row">
                     <a class="footer-bagian-kanan" href="https://www.bola.com" title="bola.com"><i class="footer-bola-com"><img src="images/bola_com.svg"></i>Bola.com</a>
                     <a class="footer-bagian-kanan" href="https://www.klikdokter.com" title="klikdokter.com"><i class="footer-klikdokter"><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
                     <a class="footer-bagian-kanan" href="https://www.brilio.net" title="brilio.net"><i class="footer-brilio"><img src="images/brilio.svg"></i>Brilio.net</a>
@@ -149,12 +132,8 @@
                     <a class="footer-bagian-kanan" href="https://www.vemale.com" title="vemale.com"><i class="footer-vemale"><img src="images/vemale.svg"></i>Vemale.com</a>
                 </li>
             </div>
-<<<<<<< HEAD
-            <div class="footer-kanan-3 col-4">
-=======
             <div class="footer-kanan-3 col-3 row align-items-end">
->>>>>>> parent of f3dc2f3... balu
-                <li>    
+                <li class="row"> 
                     <a class="footer-bagian-kanan" href="https://www.bintang.com" title="bintang.com"><i class="footer-bintang"><img src="images/bintang_com.svg"></i>Bintang.com</a>
                     <a class="footer-bagian-kanan" href="https://www.bukalapak.com" title="bukalapak.com"><i class="footer-bukalapak"><img style="width: 1%;" src="images/bukalapak.svg"></i>Bukalapak.com</a>
                     <a class="footer-bagian-kanan" href="https://www.famous.id" title="famous.id"><i class="footer-famous"><img src="images/famous.svg"></i>Famous.id</a>
@@ -163,7 +142,9 @@
                 </li>
             </div>
         </div>
-        <div>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</div>
     </div>    
+    <div class="col-12 text-center d-block">
+        <p>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</p>
+    </div>
     </footer>
 </html>
