--- a/index.html
+++ b/index.html
@@ -7,55 +7,55 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-    <header>
-        <div class="container">
-            <nav>
-                <div class="row">
-                    <div class="col"><img src="header.png" class="form-group"/></div>
-                        <div class="form-group col-md">
+    <header class="container">
+        <div class="container pt-3 d-inline-block font-weight-bold">
+                <div class="col-12">
+                    <div class="col-3"><img src="header.png" class="form-group"/></div>
+                        <div class="form-group col-5 py-2">
                             <input id="exampleFormControlInput5" placeholder="berita apa yang ingin anda baca hari ini?" class="rounded-pill form-control form-control-underlined">
                         </div>
-                        <div class="form-group com">
+                        <div class="form-group col-3 py-2">
                             <button type="submit" class="btn rounded-pill btn-block shadow-sm">Cari</button>
                         </div>
-                    <div class="col"><a href="#">MASUK</a></div>
+                    <div class="py-3" ><a href="#" style="color:orange;">MASUK</a></div>
                  </div>
-            </nav>
         </div>
-        <div>
-            <nav>
-                <ul>
-                    <div><a href="#">HOME</a></div>
-                    <div><a href="#">NEWS</a></div>
-                    <div><a href="#">BISNIS</a></div>
-                    <div><a href="#">BOLA</a></div>
-                    <div><a href="#">FOTO</a></div>
-                    <div><a href="#">TEKNO</a></div>
-                    <div><a href="#">CEK FAKTA</a></div>
-                    <div><a href="#">VIDEO</a></div>
-                    <div><a href="#">HOT</a></div>
-                    <div><a href="#">DISABILITAS</a></div>
-                    <div><a href="#">GLOBAL</a></div>
-                    <div><a href="#">OTOMOTIF</a></div>
+        <div class="container col-12">
+            <nav class="px-1 py-1 position-relative d-block m-0 text-center">
+                <ul class="m-0 p-0 list-unstyled" style="font-size:12px;">
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none"href="#">HOME</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">NEWS</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">BISNIS</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">BOLA</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">FOTO</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">TEKNO</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">CEK FAKTA</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">VIDEO</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">HOT</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">DISABILITAS</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">GLOBAL</a></div>
+                    <div><a class="d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#">OTOMOTIF</a></div>
                     <div class="dropdown">
-                        <a href="#" class="dropbtn">LAINNYA</a>
-                        <div class="dropdown-content">
-                            <a href="#">ON OFF</a>
-                            <a href="#">SURABAYA</a>
-                            <a href="#">REGIONAL</a>
-                            <a href="#">LIFESTYLE</a>
-                            <a href="#">HEALTH</a>
-                            <a href="#">CITIZEN6</a>
-                            <a href="#">TV</a>
-                            <a href="#">PROPERTI</a>
+                            <a class="nav-link dropbtn dropdown-toggle d-inline-flex w-auto m-1 px-2 py-2 font-weight-bold text-black-50 text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> LAINNYA </a>
+                        <div class="dropdown-menu" style="background-color: white">
+                            <a href="#" class="dropdown-item">ON OFF</a>
+                            <a href="#" class="dropdown-item">SURABAYA</a>
+                            <a href="#" class="dropdown-item">REGIONAL</a>
+                            <a href="#" class="dropdown-item">LIFESTYLE</a>
+                            <a href="#" class="dropdown-item">HEALTH</a>
+                            <a href="#" class="dropdown-item">CITIZEN6</a>
+                            <a href="#" class="dropdown-item">TV</a>
+                            <a href="#" class="dropdown-item">PROPERTI</a>
                         </div>
                     </div>
                 </ul>
             </nav>
-            <div class="row py-2" style="background-color: orange;">
+        </div>
+                
+            <div class="container col-12" style="background-color: orange;">
                 <!--Breaking box-->
                 <div class="col-1 col-md-3 col-lg-2 py-1 pr-md-0 mb-md-1">
                     <div class="d-inline-block d-md-block text-center breaking-caret py-1 px-2">
@@ -66,7 +66,7 @@
                 <div class="col-11 col-md-9 col-lg-10 pl-1 pl-md-2">
                     <div class="breaking-box pt-2 pb-1">
                         <!--marque-->
-                        <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseleave="this.start();">
+                        <marquee behavior="scroll" direction="left">
                           <a class="h6 font-weight-bold" href="" style="color: white;">Google Employees Protest Secret Work on Censored Search Engine for China</a>
                           <a class="h6 font-weight-bold" href="" style="color: white;">Investors Betting Against Tesla Made $1 Billion on Friday</a>
                           <a class="h6 font-weight-bold" href="" style="color: white;"> World cup 2050 will release in Dubay</a>
