--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <body>
         
     </body>
-    <footer>
-        <div class="m-2" style="background-color: rgba(214, 214, 214, 0.308)">
+    <footer class="container mt-2" style="background-color: rgba(214, 214, 214, 0.308)">
+        <div class="container col-12">
         <div class="w-100 d-inline-block float-left mt-2 col-6">
-            <div class="mt-2 mb-2 col-4">
+            <div class="mt-2 col-4">
                 <img class="d-inline" style="width: 100px;" src="images/liputan6.png"/>
             </div>
-            <div class="col-3 d-inline-block" style="width: 15%;">
+            <div class="col-2 d-inline-block" style="width: 10%;">
                 <li class="d-inline float-left text-left">
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">KONTAK</a>
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">REDAKSI</a>
@@ -94,7 +94,7 @@
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">SITEMAP</a>
                 </li>   
             </div>
-            <div class="col-5 d-inline-block" style="width:65%;">
+            <div class="col-6 d-inline-block" style="width:100%;">
                 <li class="d-inline float-right">
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">DISCLAIMER</a>
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">TENTANG KAMI</a>
@@ -102,7 +102,7 @@
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">HAK JAWAB DAN KOREKSI BERITA</a>
                 </li>
             </div>
-            <div class="col-4 d-inline-block w-50">  
+            <div class="col-4 d-inline-block" style="width:100%;">  
                 <li class="d-inline float-right">
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">FORM PENGADUAN</a>
                     <a class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" href="#">PEDOMAN MEDIA SIBER</a>
@@ -115,9 +115,9 @@
                 <a href="https://www.vidio.com/users/liputan6"><img style="width: 4%;" src="vidio.jpg" alt="vidio"></a>
             </div>
         </div>
-        <div class="w-100 d-inline float-right col-6">
+        <div class="w-100 d-inline-block float-right col-6">
             <h4 class="mt-3"><strong>Jaringan</strong></h4>
-            <div class="d-inline-block col-3 row align-items-start">
+            <div class="d-inline-block col-4 row align-items-start">
                 <li class="row">
                     <a class="d-block" style="text-decoration-color: grey;" href="https://www.liputan6.com" title="liputan6.com"><i class="footer-liputan"><img src="images/lip6.svg"></i>Liputan6.com</a>
                     <a class="d-block" style="text-decoration-color: grey;" href="https://www.vidio.com" title="vidio.com"><i class="footer-vidio"><img src="images/vidio_com.svg"></i>Vidio.com</a>
@@ -126,7 +126,7 @@
                     <a class="d-block" style="text-decoration-color: grey;" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
                 </li>
             </div>
-            <div class="d-inline-block col-3 row align-items-center">
+            <div class="d-inline-block col-4 row align-items-center">
                 <li class="row">
                     <a class="d-md-block" style="text-decoration-color: grey;" href="https://www.bola.com" title="bola.com"><i class="footer-bola-com"><img src="images/bola_com.svg"></i>Bola.com</a>
                     <a class="d-md-block" style="text-decoration-color: grey;" href="https://www.klikdokter.com" title="klikdokter.com"><i class="footer-klikdokter"><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
@@ -135,7 +135,7 @@
                     <a class="d-md-block" style="text-decoration-color: grey;" href="https://www.vemale.com" title="vemale.com"><i class="footer-vemale"><img src="images/vemale.svg"></i>Vemale.com</a>
                 </li>
             </div>
-            <div class="d-inline-block col-3 row align-items-end">
+            <div class="d-inline-block col-4 row align-items-end">
                 <li class="row"> 
                     <a class="d-md-block" style="text-decoration-color: grey;" href="https://www.bintang.com" title="bintang.com"><i class="footer-bintang"><img src="images/bintang_com.svg"></i>Bintang.com</a>
                     <a class="d-md-block" style="text-decoration-color: grey;" href="https://www.bukalapak.com" title="bukalapak.com"><i class="footer-bukalapak"><img style="width: 1%;" src="images/bukalapak.svg"></i>Bukalapak.com</a>
@@ -145,9 +145,9 @@
                 </li>
             </div>
         </div>
-        <div class="col-12 container">
-            <p>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</p>
-        </div>
+    </div>
+    <div class="col-12 text-center">
+        <p>Copyright © 2019 liputan6.com KLY KapanLagi Youniverse All Rights Reserved</p>
     </div>
     </footer>
 </html>
