--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
     <body>
         
     </body>
-    <footer class="container mt-2" style="background-color: rgba(214, 214, 214, 0.308)">
-        <div class="w-100 d-inline-block float-left mt-2 col-6">
+    <footer class="container mt-2">
+
+        <div class="w-100 container col-12" style="background-color: rgba(214, 214, 214, 0.308)">
+        <div class="w-100 d-inline-block float-left mt-2 col-6" style="line-height: 20px;">
             <div class="mt-2 col-4">
                 <img class="d-inline" style="width: 100px;" src="images/liputan6.png"/>
             </div>
-            <div class="col-2 d-inline-block" style="width: 10%;">
+            <div class="col-2 d-inline-block mt-3" style="width: 10%;">
                 <li class="d-inline float-left text-left">
                     <a href="#" class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" >KONTAK</a>
                     <a href="#" class="font-weight-bold d-block text-decoration-none text-left font-weight-700" style="font-size: 12px;" >REDAKSI</a>
@@ -130,36 +132,36 @@
                 <a href="https://www.vidio.com/users/liputan6"><img style="width: 4%;" src="vidio.jpg" alt="vidio"></a>
             </div>
         </div>
-        <div class="w-100 d-inline-block float-right col-6">
-            <h4 class="mt-3"><strong>Jaringan</strong></h4>
+        <div class="w-100 d-inline-block float-right col-6" style="line-height: 20px;">
+            <p class="font-weight-bold">Jaringan</p>
             <div class="d-inline-block col-3 row">
                 <li class="d-flex row">
-                    <a href="https://www.liputan6.com" title="liputan6.com"><img src="images/lip6.svg">Liputan6.com</a>
-                    <a class="d-block" href="https://www.vidio.com" title="vidio.com"><i class="footer-vidio"><img src="images/vidio_com.svg"></i>Vidio.com</a>
-                    <a class="d-block" href="https://www.bola.net" title="bola.net"><i class="footer-bola"><img src="images/bola_net.svg"></i>Bola.net</a>
-                    <a class="d-block" href="https://www.fimela.com" title="fimela.com"><i class="footer-fimela"><img src="images/fimela.svg"></i>Fimela.com</a>
-                    <a class="d-block" href="https://www.otosia.com" title="otosia.com"><i class="footer-otosia"><img src="images/otosia.svg"></i>Otosia.com</a>
+                    <a href="https://www.liputan6.com" title="liputan6.com" style="font-size: 12px;"><i><img src="images/lip6.svg"></i>Liputan6.com</a>
+                    <a class="d-block" href="https://www.vidio.com" title="vidio.com" style="font-size: 12px;"><i><img src="images/vidio_com.svg"></i>Vidio.com</a>
+                    <a class="d-block" href="https://www.bola.net" title="bola.net" style="font-size: 12px;"><i><img src="images/bola_net.svg"></i>Bola.net</a>
+                    <a class="d-block" href="https://www.fimela.com" title="fimela.com" style="font-size: 12px;"><i><img src="images/fimela.svg"></i>Fimela.com</a>
+                    <a class="d-block" href="https://www.otosia.com" title="otosia.com" style="font-size: 12px;"><i><img src="images/otosia.svg"></i>Otosia.com</a>
                 </li>
             </div>
-            <div class="ml-1 d-inline-block col-4 row">
+            <div class="ml-1 d-inline-block col-3 row">
                 <li class="d-flex row">
-                    <a class="d-block" href="https://www.bola.com" title="bola.com"><i class="footer-bola-com"><img src="images/bola_com.svg"></i>Bola.com</a>
-                    <a class="d-block" href="https://www.klikdokter.com" title="klikdokter.com"><i class="footer-klikdokter"><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
-                    <a class="d-block" href="https://www.brilio.net" title="brilio.net"><i class="footer-brilio"><img src="images/brilio.svg"></i>Brilio.net</a>
-                    <a class="d-block" href="https://www.KapanLagi.com" title="KapanLagi.com"><i class="footer-kapanlagi"><img src="images/kapanlagi.svg"></i>KapanLagi.com</a>
-                    <a class="d-block" href="https://www.vemale.com" title="vemale.com"><i class="footer-vemale"><img src="images/vemale.svg"></i>Vemale.com</a>
+                    <a class="d-block" href="https://www.bola.com" title="bola.com" style="font-size: 12px;"><i><img src="images/bola_com.svg"></i>Bola.com</a>
+                    <a class="d-block" href="https://www.klikdokter.com" title="klikdokter.com" style="font-size: 12px;"><i><img src="images/klikdokter.svg"></i>Klikdokter.com</a>
+                    <a class="d-block" href="https://www.brilio.net" title="brilio.net" style="font-size: 12px;"><i><img src="images/brilio.svg"></i>Brilio.net</a>
+                    <a class="d-block" href="https://www.KapanLagi.com" title="KapanLagi.com" style="font-size: 12px;"><i><img src="images/kapanlagi.svg"></i>KapanLagi.com</a>
+                    <a class="d-block" href="https://www.vemale.com" title="vemale.com" style="font-size: 12px;"><i><img src="images/vemale.svg"></i>Vemale.com</a>
                 </li>
             </div>
-            <div class="d-inline-block col-4 row">
+            <div class="d-inline-block col-3 row">
                 <li class="d-flex row"> 
-                    <a class="d-md-block"  href="https://www.bintang.com" title="bintang.com"><i class="footer-bintang"><img src="images/bintang_com.svg"></i>Bintang.com</a>
-                    <a class="d-md-block" href="https://www.bukalapak.com" title="bukalapak.com"><i class="footer-bukalapak"><img style="width: 1%;" src="images/bukalapak.svg"></i>Bukalapak.com</a>
-                    <a class="d-md-block" href="https://www.famous.id" title="famous.id"><i class="footer-famous"><img src="images/famous.svg"></i>Famous.id</a>
-                    <a class="d-md-block" href="https://www.merdeka.com" title="merdeka.com"><i class="footer-merdeka"><img src="images/merdeka.svg"></i>Merdeka.com</a>
-                    <a class="d-md-block" href="https://www.dream.co.id" title="Dream.co.id"><i class="footer-dream"><img src="images/dreamcoid.svg"></i>Dream.co.id</a>
+                    <a class="d-block"  href="https://www.bintang.com" title="bintang.com" style="font-size: 12px;"><i><img src="images/bintang_com.svg"></i>Bintang.com</a>
+                    <a class="d-block" href="https://www.bukalapak.com" title="bukalapak.com" style="font-size: 12px;"><i><img src="images/bukalapak.svg" style="width: 11%;"></i> Bukalapak.com</a>
+                    <a class="d-block" href="https://www.famous.id" title="famous.id" style="font-size: 12px;"><i><img src="images/famous.svg"></i>Famous.id</a>
+                    <a class="d-block" href="https://www.merdeka.com" title="merdeka.com" style="font-size: 12px;"><i><img src="images/merdeka.svg"></i>Merdeka.com</a>
+                    <a class="d-block" href="https://www.dream.co.id" title="Dream.co.id" style="font-size: 12px;"><i><img src="images/dreamcoid.svg"></i>Dream.co.id</a>
                 </li>
             </div>
         </div>
-        
+    </div>
     </footer>
 </html>
