--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         
     </body>
     <footer class="container mt-2">
-
-        <div class="w-100 container col-12" style="background-color: rgba(214, 214, 214, 0.308)">
+        <div style="background-color: rgba(214, 214, 214, 0.308)">
         <div class="w-100 d-inline-block float-left mt-2 col-6" style="line-height: 20px;">
             <div class="mt-2 col-4">
                 <img class="d-inline" style="width: 100px;" src="images/liputan6.png"/>
