--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             
     </header>
     <body>
-        <div class="container">
+        <div class="container mt-3">
             <div class="row">
                 <div class="card col-8 p-3 float-left">
                     <div class="col-12">
@@ -118,7 +118,14 @@
 
                 </div>
                 <div class=" card col-4">
-                        
+                    <p class="mt-3 font-weight-bold">TOPIK POPULER</p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">BCLXRESORTSWORLDSENTOSA</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SHOPEE LIGA 1</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">CPNS 2019</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">IDHAM AZIS</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SUHU PANAS</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">INDONESIA TUAN RUMAH PIALA DUNIA U-20</a></p>
+                    <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">PODCAST LIPUTAN6</a></p>
                 </div>
             </div>    
         </div>
