--- a/index.html
+++ b/index.html
@@ -116,82 +116,82 @@
                         </div>
                         
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                  <div class="carousel-item active">
-                                        <div class="row">
-                                                <div class="col-4">
-                                                    <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                    <div class="p-2">
-                                                        <p style="font-size: 12px;">Lorem ipsum</p>
-                                                        <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <img src="images/640x360.png" class="rounded" style="width:100%">
+                                            <div class="p-2">
+                                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                            </div>
+                                        </div>
+                                            <div class="col-4">
+                                                <img src="images/640x360.png" class="rounded" style="width:100%">
+                                                <div class="p-2">
+                                                    <p style="font-size: 12px;">Lorem ipsum</p>
+                                                    <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
                                                 </div>
                                             </div>
-                                  </div>
-                                  <div class="carousel-item">
-                                        <div class="row">
-                                                <div class="col-4">
-                                                    <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                    <div class="p-2">
-                                                        <p style="font-size: 12px;">Lorem ipsum</p>
-                                                        <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
+                                            <div class="col-4">
+                                                <img src="images/640x360.png" class="rounded" style="width:100%">
+                                                <div class="p-2">
+                                                    <p style="font-size: 12px;">Lorem ipsum</p>
+                                                    <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
                                                 </div>
                                             </div>
-                                  </div>
-                                  <div class="carousel-item">
-                                        <div class="row">
-                                                <div class="col-4">
-                                                    <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                    <div class="p-2">
-                                                        <p style="font-size: 12px;">Lorem ipsum</p>
-                                                        <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
-                                                </div>
-                                                <div class="col-4">
-                                                        <img src="images/640x360.png" class="rounded" style="width:100%">
-                                                        <div class="p-2">
-                                                            <p style="font-size: 12px;">Lorem ipsum</p>
-                                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
-                                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <img src="images/640x360.png" class="rounded" style="width:100%">
+                                            <div class="p-2">
+                                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                            </div>
+                                        </div>
+                                            <div class="col-4">
+                                                <img src="images/640x360.png" class="rounded" style="width:100%">
+                                                <div class="p-2">
+                                                    <p style="font-size: 12px;">Lorem ipsum</p>
+                                                    <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
                                                 </div>
                                             </div>
-                                  </div>
+                                            <div class="col-4">
+                                                <img src="images/640x360.png" class="rounded" style="width:100%">
+                                                <div class="p-2">
+                                                    <p style="font-size: 12px;">Lorem ipsum</p>
+                                                    <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <img src="images/640x360.png" class="rounded" style="width:100%">
+                                            <div class="p-2">
+                                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                                <img src="images/640x360.png" class="rounded" style="width:100%">
+                                                <div class="p-2">
+                                                    <p style="font-size: 12px;">Lorem ipsum</p>
+                                                    <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                                </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="images/640x360.png" class="rounded" style="width:100%">
+                                            <div class="p-2">
+                                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -201,14 +201,10 @@
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Next</span>
                                 </a>
-                              </div>
-
+                            </div>
                     </div>
-
                 </div>
-
-                
-                <div class=" card col-4">
+                <div class="card col-4">
                     <p class="mt-3 font-weight-bold">TOPIK POPULER</p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">BCLXRESORTSWORLDSENTOSA</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SHOPEE LIGA 1</a></p>
@@ -217,6 +213,11 @@
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SUHU PANAS</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">INDONESIA TUAN RUMAH PIALA DUNIA U-20</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">PODCAST LIPUTAN6</a></p>
+                    <div class="card m-1 align-self-center">
+                        <h4 class="m-2">LIVE STREAMING</h4>
+                        <img src="images/300x300.png" style="width:100%">
+                        <h5 class="m-2">Live Streaming Dear Netizen</h5>
+                    </div>
                 </div>
             </div>    
         </div>
