--- a/index.html
+++ b/index.html
@@ -413,18 +413,21 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-7">
-                        <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                        <div class="col-7">
+                            <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                        </div>
+                        <div class="col-5">
+                            <div class="row">
+                                    <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                            </div> 
+                            <div class="card bg-dark text-white">
+                                <img src="images/640x360.png" class="card-img" alt="images/640x360.png" style="opacity: 0.3;">
+                                <div class="card-img-overlay">
+                                  <h5 class="card-title" style="margin-top: 20%; margin-left: 45%;">+2</h5>
+                                </div>
+                              </div> 
+                        </div>
                     </div>
-                    <div class="col-5">
-                        <div class="row">
-                                <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
-                        </div> 
-                        <div class="row">
-                                <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
-                        </div> 
-                    </div>
-                </div>
 
                 <div class="p-3">
                         <div class="row no-gutters">
@@ -545,6 +548,84 @@
                                 </div>
                               </div>
                         </div>
+                    </div>
+                    <div class="p-3">
+                            <img src="images/640x360.png" style="width:100%">
+                            <div class="p-2">
+                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="p-3">
+                        <img src="images/300x300.png">
+                    </div>
+                    <div class="p-3">
+                        <img src="images/300x300.png">
+                    </div>
+                    <div class="p-3">
+                            <img src="images/640x360.png" style="width:100%">
+                            <div class="p-2">
+                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="p-3">
+                            <img src="images/640x360.png" style="width:100%">
+                            <div class="p-2">
+                                <p style="font-size: 12px;">Lorem ipsum</p>
+                                <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p><h5>Lorem Ipsum Dolor Sit Amet</h5></p>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="p-3">
+                        <img src="images/300x300.png">
                     </div>
                 </div>
                 
